ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/CnP_PaaS__CnP_Daily_Deposit__c.object-meta.xml
<CustomObject>
    <label>C&amp;P ACH Daily Deposit</label>
    <nameField>
        <displayFormat>Deposit-{000000}</displayFormat>
        <label>C&amp;P Deposit Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P ACH Daily Deposit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>