ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_BatchID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_BatchID__c</fullName>
    <label>C&amp;P Sweep Batch ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>