ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_Fee__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Fee__c</fullName>
    <label>C&amp;P Discount Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>