ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Fund_Date__c</fullName>
    <label>C&amp;P Fund Date</label>
    <type>DateTime</type>
</CustomField>