ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_OrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>C&amp;P Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>