ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_Refund__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C&amp;P Refund</label>
    <type>Checkbox</type>
</CustomField>