ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_Response__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Response__c</fullName>
    <label>C&amp;P Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>