ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Daily_Deposit__c/fields/CnP_PaaS__CnP_Sweep_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Sweep_Date__c</fullName>
    <label>C&amp;P Sweep Date</label>
    <type>Date</type>
</CustomField>